--- a/src/scss/components/select.scss
+++ b/src/scss/components/select.scss
@@ -1,179 +1,172 @@
 /*-------- Select --------*/
 
 .select {
+  position: relative;
+  height: 100px;
+
+  &__button {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    padding: 0 24px;
+
     position: relative;
-    height: 100px;
+    font-family: $font-fg;
+    font-size: 20px;
+    color: #ffffff;
 
-    &__button {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        height: 100%;
+    border: 1px solid transparent;
+    border-radius: 12px;
 
-        padding: 0 24px;
+    z-index: 2;
 
-        position: relative;
-        font-family: $font-fg;
-        font-size: 20px;
-        color: #ffffff;
-        
-        border: 1px solid transparent;
-        border-radius: 12px;
+    transition: border-color 0.2s ease-out;
+  }
 
-        z-index: 2;
+  &.opened &__button {
+    border-color: #b240df;
+  }
 
-        transition: border-color 0.2s ease-out;
-    }
+  &__button-icon {
+    flex-shrink: 0;
+    margin-left: 12px;
+  }
 
-    &.opened &__button {
-        border-color:#B240DF;
-    }
+  &__list-wrapper {
+    width: 100%;
 
-    &__button-icon {
-        flex-shrink: 0;
-        margin-left: 12px;
-    }
+    padding-right: 9px;
+    padding-top: 40px;
+    padding-left: 24px;
 
-    &__list-wrapper {
-        width: 100%;
+    background: linear-gradient(266.42deg, #191b26 0%, #121420 100%);
+    box-shadow: 0 23px 40px 0px rgb(255, 255, 255, 0.07);
+    border-radius: 0 0 12px 12px;
 
-        padding-right: 9px;
-        padding-top: 40px;
-        padding-left: 24px;
+    position: absolute;
+    top: calc(100% - 30px);
+    left: 0;
+    z-index: 1;
 
-        background: linear-gradient(266.42deg, #191B26 0%, #121420 100%);
-        box-shadow: 0 23px 40px 0px rgb(255, 255, 255, 0.07);
-        border-radius: 0 0 12px 12px;
+    opacity: 0;
+    visibility: hidden;
+    overflow: auto;
+    transition: all 0.2s ease-out;
+  }
 
-        position: absolute;
-        top: calc(100% - 30px);
-        left: 0;
-        z-index: 1;
+  &__list {
+    max-height: 464px;
 
-        opacity: 0;
-        visibility: hidden;
-        overflow: auto;
-        transition: all 0.2s ease-out;
-    }
+    padding-right: 9px;
+  }
 
-    &__list {
-        max-height: 464px;
+  &.opened &__list-wrapper {
+    opacity: 1;
+    visibility: visible;
+  }
 
-        padding-right: 9px;
-    }
+  &:not(.scroll-visible) &__list-wrapper {
+    padding-right: 24px;
+  }
 
-    &.opened &__list-wrapper {
-        opacity: 1;
-        visibility: visible;
-    }
+  &:not(.scroll-visible) &__list {
+    padding-right: 0;
+  }
 
-    &:not(.scroll-visible) &__list-wrapper {
-        padding-right: 24px;
-    }
+  &__item:not(:first-child) {
+    border-top: 1px solid rgba(232, 232, 232, 0.1);
+  }
 
-    &:not(.scroll-visible) &__list {
-        padding-right: 0;
-    }
+  &__item-button {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-    &__item:not(:first-child) {
-        border-top: 1px solid rgba(232, 232, 232, 0.1);
-    }
+    width: 100%;
+    min-height: 48px;
 
-    &__item-button {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+    font-size: 16px;
+    color: #ffffff;
 
-        width: 100%;
-        min-height: 48px;
+    transition: background-color 0.2s ease-out;
+    text-align: left;
+    line-height: 1.1;
+    text-transform: capitalize;
+  }
 
-        font-size: 16px;
-        color: #ffffff;
+  &__item-button:hover {
+    text-decoration: underline;
+  }
 
-        transition: background-color 0.2s ease-out;
-        text-align: left;
-        line-height: 1.1;
-    }
+  &__item-button:after {
+    content: "";
 
-    &__item-button:hover {
-        text-decoration: underline;
-    }
+    width: 24px;
+    height: 24px;
 
-    &__item-button:after {
-        content: "";
+    background-image: url(../../images/icons/check-circle.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
-        width: 24px;
-        height: 24px;
+    opacity: 0;
+    visibility: hidden;
 
-        background-image: url(../../images/icons/check-circle.svg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
+    transition: all 0.2s cubic-bezier(0.47, 0, 0.745, 0.715);
+  }
 
-        opacity: 0;
-        visibility: hidden;
-
-        transition: all 0.2s cubic-bezier(0.47, 0, 0.745, 0.715);
-    }
-
-    &__item-button:hover:after, &__item-button.selected:after {
-        opacity: 1;
-        visibility: visible;
-    }
+  &__item-button:hover:after,
+  &__item-button.selected:after {
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 .select {
-
-    &--main {
-        padding: 0 !important;
-    }
+  &--main {
+    padding: 0 !important;
+  }
 }
 
 @media (hover: none) and (pointer: coarse) {
-
-    .select {
-
-        &__list-wrapper {
-            padding-right: 24px;
-        }
+  .select {
+    &__list-wrapper {
+      padding-right: 24px;
     }
+  }
 }
 
 @media (max-width: 989px) {
-
-    .select {
-
-        &__button {
-            padding: 0 16px;
-        }
-
-        &__list-wrapper {
-            padding-right: 7px;
-            padding-left: 16px;
-        }
-
-        &:not(.scroll-visible) &__list-wrapper {
-            padding-right: 16px;
-        }
+  .select {
+    &__button {
+      padding: 0 16px;
     }
+
+    &__list-wrapper {
+      padding-right: 7px;
+      padding-left: 16px;
+    }
+
+    &:not(.scroll-visible) &__list-wrapper {
+      padding-right: 16px;
+    }
+  }
 }
 
 @media (max-width: 767px) {
-
-    .select {
-
-        &__button {
-            font-size: 18px;
-        }
+  .select {
+    &__button {
+      font-size: 18px;
     }
+  }
 }
 
 @media (max-width: 479px) {
-
-    .select {
-
-        &__button {
-            font-size: 16px;
-        }
+  .select {
+    &__button {
+      font-size: 16px;
     }
+  }
 }
