--- a/src/scss/components/title.scss
+++ b/src/scss/components/title.scss
@@ -1,22 +1,21 @@
 /*-------- Title --------*/
 
 .title {
-    font-family: $font-fg;
-    font-size: 20px;
-    color: #ffffff;
-    letter-spacing: 1.9px;
+  font-family: $font-fg;
+  font-size: 20px;
+  color: #ffffff;
+  letter-spacing: 1.9px;
+  text-transform: capitalize;
 }
 
 @media (max-width: 767px) {
-
-    .title {
-        font-size: 18px;
-    }
+  .title {
+    font-size: 18px;
+  }
 }
 
 @media (max-width: 479px) {
-
-    .title {
-        font-size: 16px;
-    }
+  .title {
+    font-size: 16px;
+  }
 }
