--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,3 +34,13 @@ $purpleLinear: linear-gradient(263.82deg, #b240df -12.94%, #d18cec 115.37%);
     outline: none;
   }
 }
+
+.calendar{
+  color: #ffffff !important;
+  input{
+    color: #ffffff !important;
+  }
+  button{
+    background: #ffffff;
+  }
+}
